tests/typing/fail/too_polymorphic3.t20
;; The type signature is too general.
(: f (-> 'a 'a))
(define f
  (lambda ([x : Bool])
   x))